# is-odd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: deploy.yml
examples/node/: package.json  tsconfig.json  vitest.config.ts
examples/node/src/: index.ts
examples/node/src/__tests__/: index.test.ts
examples/python/: main.py  pyproject.toml
examples/python/tests/: test_odd.py
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/node/: Cargo.toml  package.json  script.js
libs/node/src/: lib.rs
libs/node/tests/: web.rs
libs/python/: Cargo.toml  pyproject.toml
libs/python/src/: lib.rs
